spotweb download and directory fix

--- a/configs/apache-config.conf
+++ b/configs/apache-config.conf
@@ -1,8 +1,14 @@
 <VirtualHost *:80>
   ServerAdmin me@mydomain.com
-  DocumentRoot /var/www/site
+  DocumentRoot /var/www/spotweb
 
-  <Directory /var/www/site/spotweb>
+  <Directory />
+      Options Indexes FollowSymLinks MultiViews
+      AllowOverride All
+      Order deny,allow
+      Allow from all
+  </Directory>
+  <Directory /var/www/spotweb>
       Options Indexes FollowSymLinks MultiViews
       AllowOverride All
       Order deny,allow
