--- a/configs/apache-config.conf
+++ b/configs/apache-config.conf
@@ -1,14 +1,8 @@
 <VirtualHost *:80>
   ServerAdmin me@mydomain.com
-  DocumentRoot /var/www/spotweb
+  DocumentRoot /var/www/site
 
-  <Directory />
-      Options Indexes FollowSymLinks MultiViews
-      AllowOverride All
-      Order deny,allow
-      Allow from all
-  </Directory>
-  <Directory /var/www/spotweb>
+  <Directory /var/www/site/spotweb>
       Options Indexes FollowSymLinks MultiViews
       AllowOverride All
       Order deny,allow
